tests/errors/add_int_real.x
myInt = 12
myReal = 13

result = myInt + myReal